arvan-paas/kaseb-tracking-server/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: tracking-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tracking-server
  template:
    metadata:
      labels:
        app: tracking-server
    spec:
      containers:
        - resources:
            limits:
              cpu: 400m
              ephemeral-storage: 100M
              memory: 500M
            requests:
              cpu: 400m
              ephemeral-storage: 100M
              memory: 500M
          terminationMessagePath: /dev/termination-log
          name: tracking-server
          ports:
            - containerPort: 1313
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /monitoring/health
              port: 1313
              httpHeaders:
                - name: Authorization
                  value: Basic a2FzZWI6SFc5Wjk1NHNlZkt4cFdERHRjeEVhWkYyTUV0UUFjY0JXMlNiNEI0bmcyMkpUaERVczlyU0RjY3lSWFAz
            initialDelaySeconds: 60
            periodSeconds: 5
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /monitoring/health
              port: 1313
              httpHeaders:
                - name: Authorization
                  value: Basic a2FzZWI6SFc5Wjk1NHNlZkt4cFdERHRjeEVhWkYyTUV0UUFjY0JXMlNiNEI0bmcyMkpUaERVczlyU0RjY3lSWFAz
            initialDelaySeconds: 120
            failureThreshold: 1
            periodSeconds: 10
          imagePullPolicy: Always
          terminationMessagePolicy: File
          image: registry.gitlab.com/toofun-group/kaseb-tracking-server:0.0.1
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: private-reg
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 1
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
