arvan-paas/kaseb-tracking-server/service.yml
kind: Service
apiVersion: v1
metadata:
  name: tracking-server-svc
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 1313
  selector:
    app: tracking-server
  type: ClusterIP
